--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- Nav Bar Section -->
     <nav class="navbar">
       <div class="navbar__container">
         <a href="/" id="navbar__logo">CCCU</a>
@@ -30,8 +31,12 @@
           <li class="navbar_item">
             <a href="/" class="navbar__links"> Bussines </a>
           </li>
+          <li class="navbar_btn">
+            <a href="/" class="button"> Search </a>
+          </li>
         </ul>
       </div>
     </nav>
+    <script src="app.js"></script>
   </body>
 </html>
